--- a/src/assets/style/elementPlus.scss
+++ b/src/assets/style/elementPlus.scss
@@ -2,7 +2,7 @@
  * @Author: lu
  * @LastEditors: Please set LastEditors
  * @Date: 2022-11-21 09:00:31
- * @LastEditTime: 2022-11-21 16:43:46
+ * @LastEditTime: 2022-11-24 15:25:29
  * @Description: element默认样式修改
  */
 // 修改侧边栏滚动条组件的高度 100% - logo高度
@@ -16,7 +16,22 @@
 .el-dialog:not(.is-fullscreen) {
   margin-top: 6vh !important;
 }
-
+.el-table {
+  .el-table__header-wrapper,
+  .el-table__fixed-header-wrapper {
+    th {
+      word-break: break-word;
+      background-color: #f8f8f9 !important;
+      color: #515a6e;
+      height: 40px !important;
+    }
+  }
+  .el-table__body-wrapper {
+    .el-button [class*="el-icon-"] + span {
+      margin-left: 1px;
+    }
+  }
+}
 // 弹窗固定高度，显示弹窗的滚动条，而不是页面的滚动条
 .el-dialog__body {
   overflow-y: auto;
