--- a/src/assets/style/common.scss
+++ b/src/assets/style/common.scss
@@ -1,4 +1,16 @@
 /* 全局css */
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+html,
+body {
+  width: 100%;
+  height: 100%;
+}
+
 #app {
   font-size: 14px;
   max-height: 100vh;
@@ -6,11 +18,11 @@
 //总体样式
 .baseStyle {
   width: 100%;
-  height: calc(100vh - 50px);
+  // height: calc(100vh - 50px);
   padding: 20px 16px;
   box-sizing: border-box;
-  border-radius: 4px;
-  overflow: auto;
+  // border-radius: 4px;
+  // overflow: auto;
   min-width: 800px;
   // box-shadow: 0 0 8px 0 rgba(173, 178, 178, 0.6);
 }
@@ -19,27 +31,27 @@
   margin-bottom: 8px;
 }
 // 修改滚动条样式
-::-webkit-scrollbar-track-piece {
-  background: #edebeb;
-}
+// ::-webkit-scrollbar-track-piece {
+//   background: #edebeb;
+// }
 
-::-webkit-scrollbar-thumb {
-  background: #adadae;
-  border-radius: 20px;
-}
+// ::-webkit-scrollbar-thumb {
+//   background: #adadae;
+//   border-radius: 20px;
+// }
 
-::-webkit-scrollbar {
-  width: 12px;
-}
+// ::-webkit-scrollbar {
+//   width: 12px;
+// }
 
-::-webkit-scrollbar-corner {
-  background-color: #edebeb;
-}
+// ::-webkit-scrollbar-corner {
+//   background-color: #edebeb;
+// }
 
-// 横向滚动条
-::-webkit-scrollbar:horizontal {
-  height: 10px;
-}
+// // 横向滚动条
+// ::-webkit-scrollbar:horizontal {
+//   height: 10px;
+// }
 
 // 清除浮动
 .clearfix::before,
