--- a/src/assets/style/common.scss
+++ b/src/assets/style/common.scss
@@ -10,7 +10,14 @@ body {
   width: 100%;
   height: 100%;
 }
-
+html {
+  box-sizing: border-box;
+}
+*,
+*::before,
+*::after {
+  box-sizing: inherit;
+}
 #app {
   font-size: 14px;
   max-height: 100vh;
